Fix clear of initialisation map bug in AbstractTransportConnector